Fix scroll on mobile

--- a/app/assets/stylesheets/pages/_steps.scss
+++ b/app/assets/stylesheets/pages/_steps.scss
@@ -99,6 +99,8 @@ cite {
   top: 190px;
   width: 85%;
   margin-bottom: 70px;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 .speech-bubble {
